--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.12.2",
     "core-js": "^3.6.5",
-    "nuxt": "^2.14.5"
+    "node-sass": "^4.14.1",
+    "nuxt": "^2.14.5",
+    "sass-loader": "^10.0.2"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^3.1.0",
