--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "core-js": "^3.6.5",
     "node-sass": "^4.14.1",
     "nuxt": "^2.14.5",
+    "nuxt-i18n": "^6.15.1",
     "sass-loader": "^10.0.2"
   },
   "devDependencies": {
